# kevin-web-server

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake-single-platform.yml
assets/: index.html  style.css
src/: main.cpp
